Fixed about page img being too wide

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -203,3 +203,8 @@ li > a {
         }
     }
 }
+
+img {
+    max-width: 100%;
+    height: auto;
+}
